--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "AngularJS2",
   "version": "1.0.0",
-  "author": "Ray Villalobos",
-  "description": "This project is the repository for my course Up and Running with AngularJS2 course on Lynda.com",
+  "author": "Mansoor Khan",
+  "description": "This project is based on the course Up and Running with AngularJS2 on Lynda.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/planetoftheweb/angular2.git"
+    "url": "https://github.com/steady-daddy/angular2-search-filter"
   },
   "devDependencies": {
     "angular2": "2.0.0-beta.2",
@@ -18,6 +18,15 @@
     "gulp": "^3.9.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "gulp-util": "^2.2.20",
+    "gulp-concat": "^2.3.4",
+    "gulp-browserify": "^0.5.0",
+    "jquery": "^2.1.1",
+    "gulp-compass": "^1.2.0",
+    "gulp-connect": "^2.0.6",
+    "gulp-if": "^1.2.4",
+    "gulp-uglify": "^0.3.1",
+    "gulp-minify-html": "^0.1.4"
   }
 }
